--- a/package.json
+++ b/package.json
@@ -3,20 +3,24 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch ./src/index.ts",
+    "dev": "tsx watch --env-file=.env ./src/index.ts",
     "start": "node ./dist/index.js",
-    "build": "tsc"
+    "build": "tsc",
+    "db:init:dev": "node --env-file=.env src/utils/db/initDB.mjs",
+    "db:init:prod": "node src/utils/db/initDB.mjs"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "pg": "^8.18.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.6",
     "@types/node": "^25.2.3",
+    "@types/pg": "^8.16.0",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
