feat: add jwt auth

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,8 @@ NODE_ENV="development"
 HOST="http://localhost"
 PORT=3000
 DATABASE_URL=<db_url_string>
+JWT_ACCESS_SECRET=<string>
+JWT_REFRESH_SECRET=<string>
+JWT_ACCESS_DURATION=<string>
+JWT_REFRESH_DURATION=<string>
+SALT_ROUNDS=<number>
